--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,14 @@
   "version": 2,
   "builds": [
     { "src": "api/*.js", "use": "@vercel/node" },
-    { "src": "*.html", "use": "@vercel/static" }
+    { "src": "*.html", "use": "@vercel/static" },
+    { "src": "js/*", "use": "@vercel/static" },
+    { "src": "css/*", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1.js" },
-    { "src": "/(.*\\.html)", "dest": "/$1" }
+    { "src": "/(.*\\.html)", "dest": "/$1" },
+    { "src": "/js/(.*)", "dest": "/js/$1" },
+    { "src": "/css/(.*)", "dest": "/css/$1" }
   ]
 }
