--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,6 @@
     { "src": "/(.*\\.html)", "dest": "/$1" },
     { "src": "/js/(.*)", "dest": "/js/$1" },
     { "src": "/css/(.*)", "dest": "/css/$1" }
+    { "src": "/(.*\\.xlsx)", "dest": "/$1" },
   ]
 }
