--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
     { "src": "/api/(.*)", "dest": "/api/$1.js" },
     { "src": "/(.*\\.html)", "dest": "/$1" },
     { "src": "/js/(.*)", "dest": "/js/$1" },
-    { "src": "/css/(.*)", "dest": "/css/$1" }
-    { "src": "/(.*\\.xlsx)", "dest": "/$1" },
+    { "src": "/css/(.*)", "dest": "/css/$1" },
+    { "src": "/(.*\\.xlsx)", "dest": "/$1" }
   ]
 }
