--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,8 @@
     { "src": "api/*.js", "use": "@vercel/node" },
     { "src": "*.html", "use": "@vercel/static" },
     { "src": "js/*", "use": "@vercel/static" },
-    { "src": "css/*", "use": "@vercel/static" }
+    { "src": "css/*", "use": "@vercel/static" },
+     { "src": "*.xlsx", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1.js" },
